--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+# Core dependencies (DTLN engine)
 PyAudioWPatch>=0.2.12.6
 onnxruntime>=1.16.0
-numpy>=1.24.0
+numpy>=1.24.0,<2.0
 scipy>=1.11.0
+
+# DeepFilterNet engine (optional, install for --engine deepfilter)
+# torch>=2.0.0
+# torchaudio>=2.0.0
+# deepfilternet>=0.5.0
